[project]
name = "alphazero-gomoku"
version = "0.1.0"
description = "8×8 五子棋 AlphaZero 强化学习项目"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.0.0",
    "numpy>=1.24",
    "torch>=2.0",
    "flask>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["gomoku", "alphazero", "play", "arena"]
